# fortran-modernisation-workshop

./: .gitignore  Makefile  README.md  fd1d_heat_explicit.f  fd1d_heat_explicit_prb.f  source_url
exercises/: exercises.synctex  exercises.tex  fd1d_heat_explicit.f90  fmw.md  make_depend.eps  make_depend.fig
exercises/src/: fd1d_heat_explicit.f90
fortra_usage/: fortran_pie.py  fortran_usage.bib  fortran_usage.ods  fortran_usage.tex
fortran_usage/: ccp5_application.bib  ccp5_application.tex  fortran_pie.py  fortran_usage.bib  fortran_usage.ods  fortran_usage.py  fortran_usage.tex  matplotlibrc
parallel/: README  axpyCUDAFortran.f90  axpyCoarray.f90  axpyMPI.f90  axpyOpenACC.f90  config  hostsfile
solutions/: CFL_mod.f90  IO_mod.f90  Makefile  RHS_mod.f90  Solver_mod.f90  TAGS  Types_mod.f90  fd1d_heat_explicit.1  fd1d_heat_explicit.f90  fmw.md  fortran.dxg  testCFL.pf
solutions/src/: CFL_mod.f90  CMakeLists.txt  IO_mod.f90  Makefile  Makefile.in  Makefile1  RHS_mod.f90  Solver_mod.f90  TAGS  Types_mod.f90  autogen.sh  cfl_mod.f90  configure.ac  fd1d_heat_explicit.f90  io_mod.f90  normal_Makefile  rhs_mod.f90  solver_mod.f90  testSuites.inc  testcfl.pf  types_mod.f90
test/: Makefile  README  fmw_test.f90
